--- a/src/app/interviews-list/interviews-list.component.html
+++ b/src/app/interviews-list/interviews-list.component.html
@@ -2,29 +2,25 @@ Interviews-list works!
 <div id="posted-jobs" class="example-container mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
   
-      <!-- Position Column -->
-      <!-- ['company', 'title', 'date posted', 'status'] -->
-      <ng-container matColumnDef="company">
-          <th mat-header-cell *matHeaderCellDef> Company </th>
-          <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+      <!-- ['interview', 'interviewer', 'Date',  'RESULT']; -->
+      <ng-container matColumnDef="interview">
+          <th mat-header-cell *matHeaderCellDef> Interview </th>
+          <td mat-cell *matCellDef="let element"> {{element.interview}} </td>
         </ng-container>
     
-        <!-- Name Column -->
-        <ng-container matColumnDef="title">
-          <th mat-header-cell *matHeaderCellDef> Title </th>
-          <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        <ng-container matColumnDef="interviewer">
+          <th mat-header-cell *matHeaderCellDef> Interviewer </th>
+          <td mat-cell *matCellDef="let element"> {{element.interviewer}} </td>
         </ng-container>
     
-        <!-- Weight Column -->
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef>date posted</th>
-          <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+        <ng-container matColumnDef="Date">
+          <th mat-header-cell *matHeaderCellDef>Date</th>
+          <td mat-cell *matCellDef="let element"> {{element.Date}} </td>
         </ng-container>
     
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef> Status </th>
-          <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        <ng-container matColumnDef="RESULT">
+          <th mat-header-cell *matHeaderCellDef> RESULT </th>
+          <td mat-cell *matCellDef="let element"> {{element.RESULT}} </td>
         </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
