--- a/src/app/shorted-list/shorted-list.component.html
+++ b/src/app/shorted-list/shorted-list.component.html
@@ -3,28 +3,28 @@ shorted-list works!
     <table mat-table [dataSource]="dataSource">
   
       <!-- Position Column -->
-      <!-- ['company', 'title', 'date posted', 'status'] -->
-      <ng-container matColumnDef="company">
-          <th mat-header-cell *matHeaderCellDef> Company </th>
-          <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+      <!-- ['CTC', 'EXP', 'name', 'workat']-->
+      <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
     
         <!-- Name Column -->
-        <ng-container matColumnDef="title">
-          <th mat-header-cell *matHeaderCellDef> Title </th>
-          <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        <ng-container matColumnDef="workat">
+          <th mat-header-cell *matHeaderCellDef> work at </th>
+          <td mat-cell *matCellDef="let element"> {{element.workat}} </td>
         </ng-container>
     
         <!-- Weight Column -->
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef>date posted</th>
-          <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+        <ng-container matColumnDef="EXP">
+          <th mat-header-cell *matHeaderCellDef>EXP</th>
+          <td mat-cell *matCellDef="let element"> {{element.EXP}} </td>
         </ng-container>
     
         <!-- Symbol Column -->
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef> Status </th>
-          <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        <ng-container matColumnDef="CTC">
+          <th mat-header-cell *matHeaderCellDef> CTC </th>
+          <td mat-cell *matCellDef="let element"> {{element.CTC}} </td>
         </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
